Tweaked artist section
I added another artist and removed the top 5 part. It looks better with 6 people instead of 5. Also added some nicknames to each artist.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section class="album-section" id="albums">
         <h2>My Favorite Albums</h2>
         <p>Click on each genre to see some of my favorites albums.</p>
-        <div class="genres">
+        <div class="genres" id="genre-btns">
             <button onclick="loadAlbums(1)">R&B</button>
             <button onclick="loadAlbums(2)">Rap</button>
             <button onclick="loadAlbums(3)">Folk</button>
@@ -60,27 +60,37 @@
 
     <section class="artist-section" id="artists">
         <h2>Favorite Artists</h2>
-        <p>These are my top 5 favorite artists currently.</p>
+        <p>These are my favorite artists currently.</p>
         <div class="grid">
             <div class="card">
                 <img src="./Images/backseat-lovers.jpg" alt="Backseat Lovers">
-                <p>The Backseat Artists</p>
+                <h4>The Backseat Lovers</h4>
+                <p>Riding in the rearview</p>
             </div>
             <div class="card">
                 <img src="./Images/caamp.jpg" alt="Caamp">
-                <p>Caamp</p>
+                <h4>Caamp</h4>
+                <p>Ohio Boys, making beautiful noise</p>
             </div>
             <div class="card">
                 <img src="./Images/noah-kahan.jpg" alt="Noah Kahan">
-                <p>Noah Kahan</p>
+                <h4>Noah Kahan</h4>
+                <p>Just a northern boy</p>
             </div>
             <div class="card">
                 <img src="./Images/posty-malone.jpg" alt="Post Malone">
-                <p>Post Malone</p>
+                <h4>Post Malone</h4>
+                <p>Country soul in hip-hop shoes</p>
             </div>
             <div class="card">
                 <img src="./Images/zach-lane-bryan.jpg" alt="Zach Bryan">
-                <p>Zach Bryan</p>
+                <h4>Zach Bryan</h4>
+                <p>Just an okie' boy</p>
+            </div>
+            <div class="card">
+                <img src="./Images/sewerperson.jpg" alt="Sewerperson">
+                <h4>Sewerperson</h4>
+                <p>Sadness in lowercase</p>
             </div>
         </div>
     </section>
@@ -108,7 +118,7 @@
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0VySCkMP67vSTy9IrzbvHE?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
         <div class="card">
-            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0FIDCNYYjNvPVimz5icugS?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0sG2kDoApZ1e6XIQf3YYLp?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
         <div class="card">
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/01QN0DfaIrazVmGEfZ5RVX?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
