--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
   </section>
 
   <footer>
-    <p>&copy; Grant Messer</p>
+    <a href="https://open.spotify.com/user/8swfnrr2c5xp844xf93otaeuk?si=562507afca7b471b">&copy; Grant Messer</a>
   </footer>
 
   <script src="./logic.js"></script>
